--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,4 +1,5 @@
 <%- include('./layout/Header') %>
+<%- include('./layout/Navbar') %>
     <div class="showcase">
         <h1>About <span class="green-text">Express Diary</span></h1>
         <p>Simple app using express js</p>
