--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,4 +1,5 @@
 <%- include('./layout/Header') %>
+<%- include('./layout/Navbar') %>
     <div class="showcase">
         <h1>Welcome to Express <span class="green-text">Diary</span></h1>
         <p>Record Your Daily Life</p>
