nav and form completed

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -3,6 +3,6 @@
     <div class="showcase">
         <h1>Welcome to Express <span class="green-text">Diary</span></h1>
         <p>Record Your Daily Life</p>
-        <a href="">Open Your Express Diary</a>
+        <a href="/diary">Open Your Express Diary</a>
     </div>
 <%- include('./layout/Footer') %>
