--- a/views/layout/Navbar.ejs
+++ b/views/layout/Navbar.ejs
@@ -11,7 +11,7 @@
                     <a href="/about">About</a>
                 </li>
                 <li>
-                    <a href="/diary">Access Diary</a>
+                    <a href="/diary">My Diary</a>
                 </li>
             </ul>
         </nav>
