crud ops functional

--- a/views/Diary.ejs
+++ b/views/Diary.ejs
@@ -11,9 +11,8 @@
             <div class="diary-container">
                 <h3>Title: <%= diary.title %></h3>
                 <p>Date: <%= diary.date %></p>
-                <p>Date: <%= diary.id %></p>
                 <br />
-                <a href="/diary/<%= data.id %>">More</a>
+                <a href="/diary/<%= diary.id %>">More...</a>
             </div>
     
         <%})  %> 
