--- a/views/Edit.ejs
+++ b/views/Edit.ejs
@@ -2,7 +2,6 @@
 <%- include('./layout/Navbar') %>
 <div class="add-to-diary">
     <h1>Edit <span class="green-text">Diary</span></h1>
-
     <form action="/diary/edit/<%= data.id %>?_method=PUT" method="post">
         <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
@@ -11,13 +10,13 @@
         </div>
         <div class="form-group">
             <label for="description">Description:</label>
-            <textarea  value="<%= data.description %>  cols="30" rows="5" id="description" name="description" ></textarea>
+            <textarea  value="<%= data.description %>" cols="30" rows="5" id="description" name="description" ><%= data.description %></textarea>
         </div>
         <div class="form-group">
             <label for="date">Date:</label>
             <input type="date" class="form-control" id="date" name="date">
         </div>
-        <input type="submit" value="Edit Diary">
+        <input type="submit" value="Update Diary">
     </form>
 </div>
 
