--- a/views/Page.ejs
+++ b/views/Page.ejs
@@ -2,12 +2,12 @@
 <%- include('./layout/Navbar') %>
 <div class="page-container">
     <h1><%= data.title %></h1>
-    <p><%= data.title %></p>
+    <p><%= data.date %></p>
     <p class="diary-text"><%= data.description %></p>
     <div class="settings">
         <a href="/diary/edit/<%= data.id %>" class="edit">Edit</a>
 
-        <form action="/data/delete<%= data.id %>?_method=DELETE" method="post">
+        <form action="/data/delete/<%= data.id %>?_method=DELETE" method="post">
             <input type="hidden" name="_method" value="DELETE">
             <input type="submit" name="_method" value="Delete" class="delete">
         </form>
