--- a/views/layout/Navbar.ejs
+++ b/views/layout/Navbar.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a href="" class="logo"><h5>Express</h5> &nbsp <h5 class="green-text">Diary</h5></a>
+        <a href="" class="logo"><h5 class="green-text">Diary</h5></a>
 
         <nav>
             <ul>
