--- a/public/style.css
+++ b/public/style.css
@@ -18,38 +18,46 @@ body{
 }
 
 header{
+    display: flex;
+    align-content: center;
     background-color:#222;
     box-shadow: 2px 2px 4px #111;
+    padding: 20px;
 }
 
 header > .container{
+    display:flex;
     width:90%;
     margin:auto;
-    display:flex;
     justify-content: space-between;
+    align-content: center;
 }
 
-header > .container > a{
+/* header > .container > a{
     display: flex;
+    justify-content: center;
 
-}
+} */
 
 header .logo{
+   margin:0;
     text-decoration: none;
-    padding-top:25px;
+    /* padding-top:25px; */
     font-size: 25px;
     color:#fff;
     font-weight:bold;
     letter-spacing: 1px;
+    
 }
 
 header nav ul{
     display:flex;
+    margin-top: 8px;
     list-style-type: none;
 }
 
 header nav ul li{
-    padding : 25px 20px;
+    padding : 0 20px;
 }
 
 header nav ul li a{
